--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,4 @@ set(CMAKE_C_FLAGS "-g")
 
 add_executable(gameoflife gameoflife.cpp)
 
-# Equivalent to (CLIBS) -lm
-target_link_libraries(gameoflife m)
+target_link_libraries(gameoflife ncurses)
